Commit 09/11/23 -fixed pb overflow error modal

--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -249,15 +249,12 @@
 
 /* Container */
 .image-hover-container .container {
-    position: absolute;
+    position: relative;
     min-height: 250px;
     height: 60%;
     width: 20%;
     margin: auto;
     display: flex;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 /* Middle */
